# bosshogg-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml
brand/ascii/: pig-compact.txt  pig.txt
brand/guidelines/: README.md
docs/: README.md  agent-first.md  api-coverage.md  api-notes.md  architecture.md  capabilities.md  conventions.md  development.md  ecosystem-integration.md  glossary.md  naming.md  skill-token-measurement.md  v1-scope.md  vision-and-positioning.md
images/: README.md  demo.tape
packaging/homebrew/: README.md  bosshogg.rb
research/: capability-schema.yaml  competitors-and-naming.md  llm-skills-landscape.md  posthog-api.md  posthog-rust-sdk.md
scripts/: optimize-images.sh  preflight.sh
src/: analytics.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  util.rs
src/client/: cache.rs  mod.rs  query.rs
src/commands/: action.rs  alert.rs  annotation.rs  auth.rs  batch_export.rs  capture.rs  cohort.rs  completion.rs  config.rs  configure.rs  context.rs  dashboard.rs  dashboard_template.rs  dataset.rs  dataset_item.rs  doctor.rs  early_access.rs  endpoint.rs  error_tracking.rs  evaluation.rs  event.rs  event_definition.rs  experiment.rs  flag.rs  group.rs  hog_function.rs  insight.rs  insight_variable.rs  llm_analytics.rs  login.rs  logout.rs  mod.rs  org.rs  person.rs  project.rs  property_definition.rs  query.rs  role.rs  schema.rs  session_recording.rs  (+7 more)
src/output/: color.rs  interactive.rs  mod.rs  safe.rs  table.rs
tests/: cli.rs  contracts.rs  live.rs
tests/action/: mod.rs
tests/alert/: mod.rs
tests/annotation/: mod.rs
tests/auth/: cmd.rs  mod.rs  resolution.rs
tests/batch_export/: mod.rs
tests/capture/: mod.rs
tests/client/: verbs.rs
tests/cohort/: mod.rs
tests/common/: harness.rs  mod.rs
tests/completion/: mod.rs
tests/config/: mod.rs
tests/configure/: mod.rs
tests/context/: threading.rs
tests/dashboard/: mod.rs
(+84 files in other folders)
